# registry

./: .gitignore  MODULE.bazel  README.adoc  bazel_registry.json  bazel_registry.json.local  bazel_registry.json.remote
docs/: devguide.adoc
modules/arb/: metadata.json
modules/cc_config/: metadata.json
modules/cexception/: metadata.json
modules/cjson/: metadata.json
modules/cjson_s7/: metadata.json
modules/coswitch/: metadata.json
modules/cwalk/: metadata.json
modules/cwalk_s7/: metadata.json
modules/dune_s7/: metadata.json
modules/emsdk/: metadata.json
modules/findlibc/: metadata.json
modules/flint/: metadata.json
modules/fswatch/: metadata.json
modules/gdbm/: metadata.json
modules/gdbm_s7/: metadata.json
modules/gmp/: metadata.json
modules/gopt/: metadata.json
modules/gsl/: metadata.json
modules/inih/: metadata.json
modules/lemon/: metadata.json
modules/libc_s7/: metadata.json
modules/libdeflate/: metadata.json
modules/libffi/: metadata.json
modules/liblogc/: metadata.json
modules/libm_s7/: metadata.json
modules/libs7/: metadata.json
modules/libunistring/: metadata.json
modules/linenoise/: metadata.json
modules/llvm/: metadata.json
modules/lua/: metadata.json
modules/makeheaders/: metadata.json
modules/mibl/: metadata.json
modules/mpc/: metadata.json
modules/mpfr/: metadata.json
modules/mustachios/: metadata.json
modules/mustachios_s7/: metadata.json
modules/ncurses/: metadata.json
modules/notcurses/: metadata.json
tools/: BUILD
work/notcurses/config/: BUILD.bazel
(+631 files in other folders)
