load("@bazel_skylib//rules:common_settings.bzl", "string_flag")

bool_flag(name = "multimedia", build_setting_default = "none",
          values = ["ffmpeg", "oiio", "none"])

config_setting(name = "ffmpeg?",
               flag_values = {":multimedia": "ffmpeg"})
config_setting(name = "oiio?",
               flag_values = {":multimedia": "oiio"})
config_setting(name = "without_multimedia?",
               flag_values = {":multimedia": "none"})
